--- a/config.json
+++ b/config.json
@@ -13,7 +13,7 @@
         }
       ],
       "options": {
-        "createNewFolder": false
+        
       },
       "destination": "/Users/alexzhang/.Trash",
       "priority": 0
@@ -24,7 +24,7 @@
       "conditions": [
         {
           "type": "extension",
-          "extensions": ["mp3", "wav", "flac", "aac"]
+          "extensions": ["mp3", "wav", "m4a"]
         }
       ],
       "destination": "/Users/alexzhang/Music/Music/Media/Automatically Add to Music.localized/",
