--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,3 +1,3 @@
 {
-    "python.pythonPath": "/Users/alexzhang/miniconda3/envs/datasci-ml/bin/python"
+    "python.pythonPath": "/usr/local/bin/python3"
 }
